--- a/services.html
+++ b/services.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 
+
+
+
 <body>
 
 
@@ -63,172 +66,167 @@
 
 
     <main>
-        <section class="overview-section">
-            <div class="overviewPart1">
-                <div class="overviewHeading">
-                    <h2>List Of Overview</h2>
-                </div>
-                <div class="overviewContent">
-                    <div>
-                        <strong>01.</strong>
-                        <p>Company Overview</p>
-                    </div>
-                    <hr>
-                    <div>
-                        <strong>02.</strong>
-                        <p>Our History</p>
-                    </div>
-                    <hr>
-                    <div>
-                        <strong>03.</strong>
-                        <p>Mission & Vision</p>
-                    </div>
-                    <hr>
-                    <div>
-                        <strong>04.</strong>
-                        <p>Our Services</p>
-                    </div>
-                    <hr>
-                    <div>
-                        <strong>05.</strong>
-                        <p>Our Team</p>
-                    </div>
-                    <hr>
-                    <div>
-                        <strong>06.</strong>
-                        <p>Industries We Serve</p>
-                    </div>
-                    <hr>
-                    <div>
-                        <strong>07.</strong>
-                        <p>Why choose <strong class="bold">HBA</strong> logistics</p>
-                    </div>
-                    <hr>
-                    <div>
-                        <strong>08.</strong>
-                        <p>Contact Us</p>
-                    </div>
-                </div>
+
+
+
+
+        <section class="sec-1">
+            <video autoplay muted loop playsinline class="backVideo">
+                <source
+                    src="video/Drone Shot of Cargo Containers Terminal Ships at Dock Port. Stock Videos of Logistics Export Import_2.mp4"
+                    type="video/mp4" />
+            </video>
+            <div class="overlay"></div>
+            <div class="sec-1-headings">
+                <h2>Our <b>Services</b></h2>
+                <p>We Provide Perfect Logistic Solutions For You..!</p>
             </div>
-            <div class="overviewPart2">
-                <div class="overviewBackground">
-                    <div class="imageBackground">
-                        <img src="images/services/boy.jpg" alt="">
+        </section>
+
+
+        <section class="sliderSection">
+            <div class="slider">
+                <div class="slide-track">
+                    <!-- duplicated items for seamless loop -->
+                    <div class="slide">
+                        <div>
+                            <h2>01</h2>
+                        </div>
+                        <h3>Freight & Transportation</h3>
+                        <p>Reliable air, sea, and land freight with seamless
+                            multimodal logistics.</p>
                     </div>
+
+                    <div class="slide">
+                        <div>
+                            <h2>02</h2>
+                        </div>
+                        <h3>Warehousing & Distribution</h3>
+                        <p>Secure, strategically located storage for efficient
+inventory management.</p>
+                    </div>
+
+                    <div class="slide">
+                        <div>
+                            <h2>03</h2>
+                        </div>
+                        <h3>E-commerce & Supply Chain</h3>
+                        <p>End-to-end fulfilment, last-mile delivery, and
+performance optimization.</p>
+                    </div>
+
+                    <div class="slide">
+                        <div>
+                            <h2>04</h2>
+                        </div>
+                        <h3>Product Analysis</h3>
+                        <p>PSmooth international trade with expert
+regulatory guidance.</p>
+                    </div>
+                    <div class="slide">
+                        <div>
+                            <h2>01</h2>
+                        </div>
+                        <h3>Freight & Transportation</h3>
+                        <p>Reliable air, sea, and land freight with seamless
+                            multimodal logistics.</p>
+                    </div>
+
+                    <div class="slide">
+                        <div>
+                            <h2>02</h2>
+                        </div>
+                        <h3>Warehousing & Distribution</h3>
+                        <p>Secure, strategically located storage for efficient
+inventory management.</p>
+                    </div>
+
+                    <div class="slide">
+                        <div>
+                            <h2>03</h2>
+                        </div>
+                        <h3>E-commerce & Supply Chain</h3>
+                        <p>End-to-end fulfilment, last-mile delivery, and
+performance optimization.</p>
+                    </div>
+
+                    <div class="slide">
+                        <div>
+                            <h2>04</h2>
+                        </div>
+                        <h3>Product Analysis</h3>
+                        <p>PSmooth international trade with expert
+regulatory guidance.</p>
+                    </div>
+
                 </div>
             </div>
         </section>
+
+
+
+
+
+
+
+
+        <section class="comprehensiveServicesSection">
+            <div class="comprehensivePart1 revealLeft">
+                <h2>Our Comprehensive Range Of Services</h2>
+                <h4>1. Land Freight (Trucking Services)</h4>
+                <p><strong><b>•</b></strong> We operate a modern and diverse fleet
+                    equipped for safe, reliable, and well-coordinated
+                    deliveries of all types of goods:</p><br>
+                <p><strong><b>•</b></strong> Refrigerated Trucks: For perishable, food, and
+                    temperature-sensitive cargo.</p><br>
+                <p><strong><b>•</b></strong> Flatbed and Lowbed Trailers: Ideal for heavy
+                    equipment, machinery, oversized loads, and
+                    containers.</p><br>
+                <p><strong><b>•</b></strong> Box and Curtain Trailers: For general goods, high-value, or protected
+                    shipments.</p><br>
+                <p><strong><b>•</b></strong> Small and Medium Trucks: For local deliveries
+                    and express transport needs.</p><br>
+                <p><strong><b>•</b></strong> We are also enhancing our operations with GPS-enabled tracking systems to
+                    offer
+                    better visibility and coordination for our clients.</p>
+            </div>
+            <div class="comprehensivePart2 revealRight">
+                <div>
+                    <img src="images/services/truck2.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="comprehensiveServicesSection" style="padding-left: 0;">
+
+            <div class="comprehensivePart2 paddingProperty">
+                <div>
+                    <img src="images/services/truck.jpg" alt="" class="clipPath">
+                </div>
+            </div>
+            <div class="comprehensivePart1 RightSlideAnnimation">
+                <h4>2. Destinations We Serve</h4>
+                <p>We proudly cover major trade routes across the GCC and the wider Middle East,
+                    managing full customs clearance, documentation, and border coordination to ensure smooth, timely
+                    deliveries.
+                </p><br>
+                <p>Our current destinations include:</p><br>
+                <p><strong><b>•</b></strong> UAE: All Emirates — Dubai, Abu Dhabi, Sharjah, Ajman, RAK, UAQ, Fujairah.
+                </p>
+                <br>
+                <p><strong><b>•</b></strong> Saudi Arabia: Riyadh, Dammam, Jeddah, Makkah, Madinah, Qassim, Tabuk,
+                    Jizan,
+                    Abha, and more.</p><br>
+                <p><strong><b>•</b></strong> Kuwait, Qatar, Oman, Bahrain — with regular and reliable routes.</p><br>
+                <p> (With ongoing expansion plans to further strengthen our regional network.)</p>
+            </div>
+        </section>
+
+
+
+
+
     </main>
-
-
-
-
-    <section class="services-section">
-        <div class="services-container">
-
-            <div class="services-left">
-                <h2>Our Services</h2>
-
-                <div class="service-box">
-                    <div class="num">01</div>
-                    <div class="service-text">
-                        <h4>Freight & Transportation</h4>
-                        <p>Reliable air, sea, and land freight with seamless multimodal logistics.</p>
-                    </div>
-                </div>
-
-                <div class="service-box">
-                    <div class="num">02</div>
-                    <div class="service-text">
-                        <h4>Warehousing & Distribution</h4>
-                        <p>Secure, strategically located storage for efficient inventory management.</p>
-                    </div>
-                </div>
-
-                <div class="service-box">
-                    <div class="num">03</div>
-                    <div class="service-text">
-                        <h4>E-commerce & Supply Chain</h4>
-                        <p>End-to-end fulfillment, last-mile delivery, and performance optimization.</p>
-                    </div>
-                </div>
-
-                <div class="service-box">
-                    <div class="num">04</div>
-                    <div class="service-text">
-                        <h4>Customs & Compliance</h4>
-                        <p>Smooth international trade with expert regulatory guidance.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="services-right">
-                <div class="img-box">
-                    <img src="images/services/truck.jpg" alt="Services">
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-
-
-
-
-    <section class="comprehensiveServicesSection">
-        <div class="comprehensivePart1 revealLeft">
-            <h2>Our Comprehensive Range Of Services</h2>
-            <h4>1. Land Freight (Trucking Services)</h4>
-            <p><strong><b>•</b></strong> We operate a modern and diverse fleet
-                equipped for safe, reliable, and well-coordinated
-                deliveries of all types of goods:</p><br>
-            <p><strong><b>•</b></strong> Refrigerated Trucks: For perishable, food, and
-                temperature-sensitive cargo.</p><br>
-            <p><strong><b>•</b></strong> Flatbed and Lowbed Trailers: Ideal for heavy
-                equipment, machinery, oversized loads, and
-                containers.</p><br>
-            <p><strong><b>•</b></strong> Box and Curtain Trailers: For general goods, high-value, or protected
-                shipments.</p><br>
-            <p><strong><b>•</b></strong> Small and Medium Trucks: For local deliveries
-                and express transport needs.</p><br>
-            <p><strong><b>•</b></strong> We are also enhancing our operations with GPS-enabled tracking systems to offer
-                better visibility and coordination for our clients.</p>
-        </div>
-        <div class="comprehensivePart2 revealRight">
-            <div>
-                <img src="images/services/truck2.jpg" alt="">
-            </div>
-        </div>
-    </section>
-
-    <!-- <section class="comprehensiveServicesSection">
-
-        <div class="comprehensivePart2 revealRight">
-            <div>
-                <img src="images/services/truck2.jpg" alt="">
-            </div>
-        </div>
-        <div class="comprehensivePart1">
-            <h4>2. Destinations We Serve</h4>
-            <p>We proudly cover major trade routes across the GCC and the wider Middle East,
-                managing full customs clearance, documentation, and border coordination to ensure smooth, timely
-                deliveries.
-            </p><br>
-            <p>Our current destinations include:</p><br>
-            <p><strong><b>•</b></strong> UAE: All Emirates — Dubai, Abu Dhabi, Sharjah, Ajman, RAK, UAQ, Fujairah.</p>
-            <br>
-            <p><strong><b>•</b></strong> Saudi Arabia: Riyadh, Dammam, Jeddah, Makkah, Madinah, Qassim, Tabuk, Jizan,
-                Abha, and more.</p><br>
-            <p><strong><b>•</b></strong>  Kuwait, Qatar, Oman, Bahrain — with regular and reliable routes.</p><br>
-            <p> (With ongoing expansion plans to further strengthen our regional network.)</p>
-        </div>
-    </section>
-
-
-
- -->
-
-
 
 
 
@@ -387,24 +385,6 @@
 
 
 
-    <script>
-        const revealElements = document.querySelectorAll('.revealLeft, .revealRight, .comprehensivePart1, .comprehensivePart2');
-
-        const revealOnScroll = () => {
-            const triggerBottom = window.innerHeight * 0.85;
-            revealElements.forEach(el => {
-                const boxTop = el.getBoundingClientRect().top;
-                if (boxTop < triggerBottom) {
-                    el.classList.add('active');
-                } else {
-                    el.classList.remove('active');
-                }
-            });
-        };
-
-        window.addEventListener('scroll', revealOnScroll);
-        window.addEventListener('load', revealOnScroll);
-    </script>
 
     <script>
         const elements = document.querySelectorAll('.services-left, .services-right');
